@@ -3,6 +3,7 @@
 	* Adding jet efficiency plots as function of mu
 	* Adding micro tree for sensitivity studies with TMVA
 	* Adding flag for multithreading
+	* Added loop to produce all jet efficiency plots in one go
 
 21-04-2015 Gabriele Bertoli <gbertoli@cern.ch>
 	* Adding profiling plot for the number of jets as function of N_PV
